--- a/notifaction/src/main/res/layout/notification_layout_big.xml
+++ b/notifaction/src/main/res/layout/notification_layout_big.xml
@@ -2,15 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@android:color/white"
     android:orientation="horizontal" >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dd"
-        android:textSize="30sp"
-        android:background="@android:color/holo_green_light"/>
+        android:text="发现新的自启应用"
+        android:textColor="@android:color/primary_t"
+        android:textAppearance="@style/Notifaction.Text.Title" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="可释放容量345.6MB"
+        android:textAppearance="@style/Notifaction.Text.Content"/>
 
     <!-- some more elements.. -->
 </LinearLayout>
