--- a/notifaction/src/main/res/values/styles.xml
+++ b/notifaction/src/main/res/values/styles.xml
@@ -6,6 +6,6 @@
     </style>
 
     <style name="Notifaction.Text.Title" parent="@android:style/TextAppearance.StatusBar.EventContent.Title" />
-    <style name="Notifaction.Text.Content" parent="@android:style/TextAppearance.StatusBar.EventContent.Info" />
+    <style name="Notifaction.Text.Content" parent="@android:style/TextAppearance.StatusBar.EventContent" />
 
 </resources>
