--- a/view/src/main/res/layout/activity_main.xml
+++ b/view/src/main/res/layout/activity_main.xml
@@ -7,9 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="haha"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="haha"/>-->
 
 </RelativeLayout>
