--- a/databinding/src/main/res/layout/activity_first_demo.xml
+++ b/databinding/src/main/res/layout/activity_first_demo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable name="user" type="com.gmail.huashadow.study.databinding.User" />
+        <variable name="user" type="com.gmail.huashadow.study.databinding.viewmodel.User" />
     </data>
 
     <LinearLayout
