--- a/databinding/src/main/res/layout/layout_view_with_ids.xml
+++ b/databinding/src/main/res/layout/layout_view_with_ids.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+        <variable
+            name="padding"
+            type="Integer" />
+        <variable
+            name="user"
+            type="com.gmail.huashadow.study.databinding.viewmodel.User" />
+    </data>
+
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -15,7 +24,9 @@
         <ImageView
             android:id="@+id/iv_cover"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:tint="@{null}"
+            android:haha="@{padding}"/>
 
     </LinearLayout>
 </layout>
