--- a/databinding/src/main/res/layout/activity_first_demo.xml
+++ b/databinding/src/main/res/layout/activity_first_demo.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable name="user" type="com.gmail.huashadow.study.databinding.viewmodel.User" />
