--- a/databinding/src/main/res/layout/activity_listening_binding.xml
+++ b/databinding/src/main/res/layout/activity_listening_binding.xml
@@ -15,23 +15,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <!--lambda表达式可以接收所有参数，也可以所有都不接收-->
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onCheckedChanged="@{(cb, isChecked) -> presenter.onCompletedChanged(isChecked)}"/>
-
-
-        <!--Error:(14, 43) The callback android.widget.CompoundButton.OnCheckedChangeListener#onCheckedChanged
-        has 2 methods but the lambda defined has 1. It should have either 0 or equal number of parameters.-->
-
-        <!--<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"-->
-        <!--android:onCheckedChanged="@{(cb) -> presenter.onCompletedChanged(isChecked)}" />-->
 
         <!--返回值需要跟接口一致-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onLongClick="@{() -> presenter.onLongClick()}"/>
+
+
+        <!--Error:(14, 43) The callback android.widget.CompoundButton.OnCheckedChangeListener#onCheckedChanged
+       has 2 methods but the lambda defined has 1. It should have either 0 or equal number of parameters.-->
+        <!--<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"-->
+        <!--android:onCheckedChanged="@{(cb) -> presenter.onCompletedChanged(isChecked)}" />-->
+
     </LinearLayout>
 
 </layout>
